# NetworkManager

./: .gitignore  .gitlab-ci.yml  Makefile.am  autogen.sh  config.h.meson  configure.ac  meson.build
clients/cli/: connections.c  devices.c
clients/common/: nm-meta-setting-desc.c  nm-meta-setting-desc.h
contrib/fedora/: REQUIRED_PACKAGES
contrib/fedora/rpm/: NetworkManager.spec
contrib/scripts/: nm-ci-run.sh
lib/n-acd/src/: n-acd.c
lib/n-ipv4ll/: .gitignore  Makefile.am  meson.build
lib/n-ipv4ll/src/: libnipv4ll.sym  n-ipv4ll.c  test-basic.c  test.h
libnm-core/: nm-dbus-interface.h  nm-keyfile-internal.h  nm-setting-ip6-config.c  nm-setting-wireless-security.c  nm-setting-wireless.c  nm-setting-wireless.h  nm-utils.c
libnm-core/tests/: test-general.c
man/: NetworkManager.conf.xml
shared/: meson.build
shared/n-acd/src/: n-acd.c
shared/nm-utils/: nm-enum-utils.c  nm-io-utils.c  nm-secret-utils.c  nm-secret-utils.h  nm-shared-utils.c  nm-shared-utils.h  nm-str-buf.h  nm-test-utils.h
src/: libnipv4ll.pc.in  main.c  meson.build  n-ipv4ll.h  nm-auth-utils.c  nm-config.c  nm-manager.c  test-api.c
src/devices/: nm-acd-manager.c  nm-device-ethernet.c  nm-device-macsec.c  nm-device.c
src/devices/tests/: test-acd.c
src/devices/wifi/: nm-device-wifi.c  nm-wifi-ap.c
src/devices/wwan/: meson.build  nm-modem-broadband.c  nm-service-providers.c  nm-service-providers.h
src/platform/: nm-linux-platform.c  nm-platform.c  nm-platform.h
src/platform/tests/: test-link.c
src/platform/wifi/: nm-wifi-utils-nl80211.c  nm-wifi-utils.c
src/settings/: nm-settings-plugin.c  nm-settings-plugin.h  nm-settings-storage.c  nm-settings-storage.h  nm-settings.c
src/settings/plugins/ifcfg-rh/: nms-ifcfg-rh-plugin.c  nms-ifcfg-rh-reader.c  nms-ifcfg-rh-writer.c
src/settings/plugins/ifcfg-rh/tests/: test-ifcfg-rh.c
src/settings/plugins/keyfile/: nms-keyfile-plugin.c  nms-keyfile-reader.c  nms-keyfile-reader.h  nms-keyfile-storage.c  nms-keyfile-storage.h  nms-keyfile-utils.c  nms-keyfile-utils.h  nms-keyfile-writer.c  nms-keyfile-writer.h
src/supplicant/: nm-supplicant-config.c  nm-supplicant-config.h  nm-supplicant-interface.c  nm-supplicant-interface.h  nm-supplicant-manager.c  nm-supplicant-settings-verify.c
src/supplicant/tests/: test-supplicant-config.c
src/systemd/: nm-sd.h
